WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251715
Fix build failure in NetworkDataTaskCocoa signposts
https://bugs.webkit.org/show_bug.cgi?id=251715
Summary
Fix build failure in NetworkDataTaskCocoa signposts
Ben Nham
Reported
2023-02-03 12:10:03 PST
259826@main
broke the build due to passing a WTF::String instead of a C string to a logging macro. This was not caught by EWS because the macro does nothing when compiling with the public SDK.
Attachments
Add attachment
proposed patch, testcase, etc.
Ben Nham
Comment 1
2023-02-03 12:10:11 PST
<
rdar://problem/105015201
>
Ben Nham
Comment 2
2023-02-03 12:11:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9620
EWS
Comment 3
2023-02-03 12:30:00 PST
Committed
259832@main
(9c96828e21cd): <
https://commits.webkit.org/259832@main
> Reviewed commits have been landed. Closing PR #9620 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug