Fix build failure in NetworkDataTaskCocoa signposts https://bugs.webkit.org/show_bug.cgi?id=251715 rdar://105015201

Reviewed by Wenson Hsieh and Alex Christensen.

259826@main broke the build due to passing a WTF::String instead of a C string to a logging
macro. This was not caught by EWS because the macro does nothing when compiling with the public SDK.

* Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(WebKit::NetworkDataTaskCocoa::NetworkDataTaskCocoa):

Canonical link: https://commits.webkit.org/259832@main